<resources>
	<string name="app_name">Sun Position</string>
	<string name="angle_placeholder">-99</string>
	<string name="angle_placeholder_fraction">.9999</string>
	<string name="time_2_placeholder">99:99</string>
	<!-- ‒ is figure dash (as wide as a digit), not hypen-minus -->
	<string name="time_2_none">‒‒:‒‒</string>
	<string name="time_3_placeholder">99:99:99</string>
	<string name="threshold_placeholder">above -99°</string>
	<string name="threshold_above">above %1$s°</string>
	<string name="threshold_below">below %1$s°</string>
	<string name="threshold_relation_above">above</string>
	<string name="threshold_relation_below">below</string>
	<string name="light_state_twilight_nautical">nautical twilight</string>
	<string name="light_state_twilight_civil">civil twilight</string>
	<string name="light_state_twilight_astronomical">astro. twilight</string>
	<string name="light_state_dusk_nautical">nautical dusk</string>
	<string name="light_state_dusk_civil">civil dusk</string>
	<string name="light_state_dusk_astronomical">astro. dusk</string>
	<string name="light_state_dawn_nautical">nautical dawn</string>
	<string name="light_state_dawn_civil">civil dawn</string>
	<string name="light_state_dawn_astronomical">astro. dawn</string>
	<string name="light_state_sunset">sunset</string>
	<string name="light_state_sunrise">sunrise</string>
	<string name="light_state_day">day-time</string>
	<string name="light_state_night">night-time</string>
	<string name="light_state_invalid">invalid</string>
	<string name="call_to_action_refresh">Tap to refresh</string>
	<string name="call_to_action_location">No location available</string>
	<string name="call_to_action_settings">Change Settings</string>
	<string name="warning_no_location"><b>The widget needs to know where you are</b>. Please adjust your Location Settings by tapping here, then wait a moment.</string>
	<string name="warning_no_location_settings">Can\'t start Location Settings, sorry.</string>
	<string name="warning_maximum">The sun will not go above %1$.1f° in the foreseeable future, setting %2$.1f° will always yield the same results.</string>
	<string name="warning_minimum">The sun will not go below %1$.1f° in the foreseeable future, setting %2$.1f° will always yield the same results.</string>
	<string name="message_selected_angle">The widget will show the current angle and the time range when the sun is %1$s %2$.0f°.</string>
	<string name="cd_selected_angle">Visualization of selected angle threshold</string>
	<string name="config_done">Done</string>
	<string name="config_title">Sun Position Widget</string>
	<string name="config_info">Info</string>
	<string name="pref_showPartOfDay_title">Show Part of Day</string>
	<string name="pref_showLastUpdateTime_title">Show Last Update</string>
	<string name="config_help">
		<big><b>What\'s that degree (°)?</b></big>
		\n<i>Altitude angle</i>.
		The widget shows the current position of the sun which is the angle between the horizon and the sun:
		\n<annotation drawable="widget_1x1_preview">&#xFFFC;</annotation>

		\n\n<big><b>Threshold</b></big>
		\n<i>You can set a threshold for the sun\'s position.</i>
		The threshold will show the time range when the sun\'s altitude angle is above/below the threshold.
		The time range will be <b>bold</b> when the sun is in the right position.
		The start/end time of the range will be <annotation color="coming_soon" bgcolor="widget_highlight">highlighted</annotation> up to 30 minutes before the sun enters/leaves the specified range.
		\n<b>For example</b>: if the threshold is above 0° this is good for a soft alert before sunrise/sunset.

		\n\n<big><b>Hide parts of the widget</b></big>
		\n<i>Open the options menu to do so.</i>
		You can show/hide the part of the day and last update time displays in case your phone\'s current launcher doesn\'t give enough space for the widget.
	</string>
</resources>
