<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/margin2"
	tools:ignore="RtlHardcoded"
	tools:context=".SunAngleWidgetConfiguration"
	>
	<Button
		android:id="@+id/btn_ok"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:text="@string/config_done"
		/>
	<TextView
		android:id="@+id/message"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:textIsSelectable="true"
		android:clickable="true"
		tools:text="@string/message_selected_angle"
		/>
	<ToggleButton
		android:id="@+id/thresholdRelation"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@id/btn_ok"
		android:layout_alignParentRight="true"
		android:textOn="@string/threshold_relation_above"
		android:textOff="@string/threshold_relation_below"
		android:checked="true"
		/>
	<Spinner
		android:id="@+id/preset"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_above="@id/btn_ok"
		android:layout_toLeftOf="@id/thresholdRelation"
		android:entries="@array/angle_preset"
		/>
	<net.twisterrob.android.view.VerticalSeekBar
		android:id="@+id/angle"
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:layout_alignBottom="@id/visualization"
		android:layout_alignParentRight="true"
		android:layout_alignTop="@id/visualization"
		android:max="180"
		android:thumb="@drawable/ic_sun"
		tools:progress="90"
		/>
	<ImageView
		android:id="@id/visualization"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/margin"
		android:layout_above="@id/preset"
		android:layout_alignParentLeft="true"
		android:layout_below="@id/message"
		android:layout_toLeftOf="@id/angle"
		android:src="@drawable/ic_launcher"
		android:contentDescription="@string/cd_selected_angle"
		/>
</RelativeLayout>
